--- a/test.CSS
+++ b/test.CSS
@@ -1,1 +1,68 @@
 
+/* Estilos para el encabezado */
+header {
+	background-color: #121212;
+	color: #fff;
+	padding: 20px;
+	font-family: 'Lato', sans-serif;
+}
+header h1 {
+	margin: 0;
+	font-size: 48px;
+	line-height: 1.2;
+}
+header nav ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+}
+header nav li {
+	margin: 0 20px;
+}
+header nav a {
+	color: #fff;
+	text-decoration: none;
+	font-size: 18px;
+	font-weight: bold;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: color 0.2s;
+}
+header nav a:hover {
+	color: #3ba7ff;
+}
+
+/* Estilos para el contenido principal */
+main {
+	padding: 20px;
+	background-color: #f8f8f8;
+	font-family: 'Roboto', sans-serif;
+}
+section {
+	margin-bottom: 40px;
+	padding: 40px;
+	background-color: #fff;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
+}
+h2 {
+	font-size: 36px;
+	margin-bottom: 20px;
+}
+p {
+	line-height: 1.5;
+	margin-bottom: 20px;
+}
+
+/* Estilos para el pie de página */
+footer {
+	background-color: #121212;
+	color: #fff;
+	padding: 20px;
+	text-align: center;
+	font-family: 'Lato', sans-serif;
+	font-size: 14px;
+}
