Update and rename test.css to index.css

--- a/index.css
+++ b/index.css
@@ -66,3 +66,13 @@ footer {
 	font-family: 'Lato', sans-serif;
 	font-size: 14px;
 }
+.logos-bar {
+  background-color: #f8f8f8;
+  height: 50px;
+  overflow: hidden;
+}
+
+.logos-bar img {
+  height: 30px;
+  margin: 10px;
+}
